kubernetes_manifests/monitoring/grafana/grafana.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monitoring
    component: grafana
  name: monitoring-grafana
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: monitoring
      component: grafana
  template:
    metadata:
      labels:
        app: monitoring
        component: grafana
    spec:
      containers:
        - name: monitoring-grafana
          image: grafana/grafana
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: monitoring-grafana-volume
          securityContext:
            runAsGroup: 0
            runAsUser: 0

          
      volumes:
        - name: monitoring-grafana-volume
          persistentVolumeClaim:
            claimName: monitoring-grafana-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monitoring
    component: grafana
  name:  monitoring-grafana-service
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 3000
    nodePort: 30111
    protocol: TCP
  selector:
    app: monitoring
    component: grafana
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: monitoring-grafana
  name: monitoring-grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.bank.dotin.ir
    http:
      paths:
      - backend:
          service:
            name: monitoring-grafana-service
            port:
              number: 3000
        path: /
        pathType: Prefix
